# claude-experimental

./: .gitignore  CLAUDE.md  README.md  build-extension.sh
claude-authoring-all-os-V7.0/: .mcpbignore  README.md  manifest.json
claude-authoring-all-os-V7.0/server/: main.py  pyproject.toml
claude-authoring-all-os-V7.0/server/caseware_authoring_tools/: __init__.py  __main__.py  analytics_tools.py  api_client.py  cloud_proxy.py  converter.py  cwp_tools.py  engagement_tools.py  payload_builder.py  se_tools.py  server.py  token_manager.py  workflow_tools.py
claude-authoring-all-os-V7.0/server/caseware_authoring_tools/cwp_reader/: __init__.py  cwp_reader.py  errors.py  export.py  tools.py
claude-authoring-all-os-V7.0/server/caseware_authoring_tools/knowledge_graph/: __init__.py  __main__.py
claude-authoring-all-os-V7.0/server/caseware_authoring_tools/knowledge_graph/algorithms/: __init__.py  traversal.py
claude-authoring-all-os-V7.0/server/caseware_authoring_tools/knowledge_graph/cli/: __init__.py  main.py
claude-authoring-all-os-V7.0/server/references/: caseware-cloud-mcp-authoring.md  caseware-cloud-mcp-full.md  checklist-authoring.md  document-type-detection.md  extension-audit-2026-03-12.md  hierarchy-rules.md  knowledge-graph.md  letter-authoring.md  mcpb-manifest-spec.md  outline-format.md  payload-schemas.md  query-authoring.md  workflow-author.md  workflow-convert.md  workflow-edit.md  workflow-full.md  workflow-identify-type.md  workflow-visualize.md
claude-authoring-all-os-V7.0/server/tests/: test_cwp_reader.py  test_payload_builder.py
(+14 files in other folders)
