[project]
name = "caseware-gateway"
version = "7.0.0"
description = "Unified MCP gateway for Caseware Cloud: authoring, engagement, workflow, analytics, SE API, and CWP template analysis"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "networkx>=3.0",
    "olefile>=0.47",
]
